--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,57 @@
-@import url("https://fonts.googleapis.com/css?family=Montserrat:400,500,700,900");
+@import url("https://fonts.googleapis.com/css?family=Montserrat:400,500,700,800,900");
 * {
   box-sizing: border-box; }
+
+body {
+  margin: 0; }
+
+header {
+  background-image: url("../images/header_devstudio.jpg");
+  height: 80vh;
+  background-attachment: fixed;
+  background-size: cover;
+  background-position: 50% 100%;
+  background-repeat: no-repeat; }
+  header .navbar-container {
+    display: flex;
+    justify-content: space-between;
+    height: auto;
+    position: fixed;
+    top: 4.5rem;
+    width: 100vw; }
+    header .navbar-container .nav-elem {
+      height: 5rem;
+      background-color: #203372;
+      width: 10vw;
+      box-shadow: 0px 0px 10px 0px #203372; }
+    header .navbar-container .logo-container {
+      width: 400px; }
+      header .navbar-container .logo-container img {
+        position: absolute; }
+    header .navbar-container nav {
+      height: 5rem;
+      font-family: "Moontserrat", sans-serif;
+      font-weight: 800;
+      letter-spacing: 1px;
+      width: 80vw;
+      color: #fff;
+      background-color: #203372;
+      box-shadow: 0px 0px 10px 0px #203372; }
+      header .navbar-container nav ul {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        list-style-type: none;
+        height: auto;
+        text-transform: uppercase;
+        margin: 0;
+        padding: 0; }
+        header .navbar-container nav ul li {
+          margin-right: 60px;
+          line-height: 5rem; }
+          header .navbar-container nav ul li a {
+            text-decoration: none;
+            color: white;
+            font-size: 1.2rem; }
 
 /*# sourceMappingURL=style.css.map */
