--- a/css/style.prefixed.css
+++ b/css/style.prefixed.css
@@ -104,7 +104,21 @@ header {
   .sect-Technologies h3 {
     border-bottom: 3px solid #203372;
     line-height: 3.5rem;
-    display: inline-block; }
+    display: inline-block;
+    margin-bottom: 3rem; }
+  .sect-Technologies .technologies-background-area {
+    background-image: url("../images/techsection_code.jpg");
+    padding: 6rem;
+    position: relative;
+    z-index: 0; }
+  .sect-Technologies .technologies-layer {
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    background-color: rgba(202, 202, 202, 0.4);
+    z-index: -1; }
   .sect-Technologies .title-technologies {
     background-color: #203372;
     display: inline-block;
@@ -127,7 +141,7 @@ header {
       height: 1.7rem;
       width: 1.7rem;
       background-color: #203372;
-      transform: matrix(0.99, 0.42, -0.99, 0.42, 0, 0);
+      transform: matrix(0.99, 0.42, -0.99, 0.42, 0, 0.8);
       box-shadow: 0px 0px 10px 0px #203372; }
     .sect-Technologies .line::before {
       content: "";
