--- a/sass/style.scss
+++ b/sass/style.scss
@@ -128,6 +128,22 @@ header {
         border-bottom: 3px solid $colorOfNav;
         line-height: 3.5rem;
         display: inline-block;
+        margin-bottom: 3rem;
+    }
+    .technologies-background-area {
+        background-image: url('../images/techsection_code.jpg');
+        padding: 6rem;
+        position: relative;
+        z-index: 0;
+    }
+    .technologies-layer {
+        position: absolute;
+        top: 0;
+        bottom: 0;
+        left: 0;
+        right: 0;
+        background-color: rgba(202, 202, 202, 0.4);
+        z-index: -1;
     }
     .title-technologies {
         background-color: $colorOfNav;
@@ -151,7 +167,7 @@ header {
             height: 1.7rem;
             width: 1.7rem;
             background-color: $colorOfNav;
-            transform: matrix(0.99, 0.42, -0.99, 0.42, 0, 0);
+            transform: matrix(0.99, 0.42, -0.99, 0.42, 0, 0.8);
             box-shadow: $navBoxShadow;
         }
         &::before {
