--- a/css/style.css
+++ b/css/style.css
@@ -211,6 +211,7 @@ header {
       width: 100%; }
       .sect-projects .project-container .right-side .photo-cell .project-1 {
         background-image: url("../images/design_lab.jpg");
-        width: 100%; }
+        width: 100%;
+        height: 3rem; }
 
 /*# sourceMappingURL=style.css.map */
