--- a/sass/style.scss
+++ b/sass/style.scss
@@ -264,6 +264,7 @@ header {
                 .project-1 {
                     background-image: url("../images/design_lab.jpg");
                     width: 100%;
+                    height: 3rem;
                 }
             }
         }
