--- a/css/style.css
+++ b/css/style.css
@@ -165,7 +165,6 @@ header {
   .sect-projects h5 {
     margin: 0 0 0.5rem 0; }
   .sect-projects .project-container {
-    max-width: 88%;
     margin: 0 auto 0 0;
     display: flex; }
     .sect-projects .project-container .left-side {
@@ -173,7 +172,8 @@ header {
       background-color: #979db1;
       padding: 5rem 0 5rem 6rem;
       color: white;
-      box-shadow: 0px 0px 10px 0px #979db1; }
+      box-shadow: 0px 0px 10px 0px #979db1;
+      width: 35%; }
       .sect-projects .project-container .left-side .list-left-side {
         display: flex;
         flex-direction: column; }
@@ -188,6 +188,38 @@ header {
           .sect-projects .project-container .left-side .list-left-side .cell:hover .arrow {
             background-color: #030e37;
             box-shadow: 0px 0px 10px 0px #030e37; }
+          .sect-projects .project-container .left-side .list-left-side .cell:hover .project-min .photo-cell {
+            background-color: #030e37;
+            box-shadow: 0px 0px 10px 0px #030e37; }
+          .sect-projects .project-container .left-side .list-left-side .cell .project-min {
+            position: absolute;
+            top: calc(50% - 9rem);
+            right: -65rem; }
+            .sect-projects .project-container .left-side .list-left-side .cell .project-min .photo-cell {
+              height: 18rem;
+              width: 60rem;
+              background-color: #979db1;
+              box-shadow: 0px 0px 10px 0px #979db1;
+              padding: 1rem;
+              transition-duration: 0.5s; }
+              .sect-projects .project-container .left-side .list-left-side .cell .project-min .photo-cell .project-1 {
+                background-image: url("../images/design_lab.jpg");
+                width: 100%;
+                height: 100%;
+                background-position: center;
+                background-size: cover; }
+              .sect-projects .project-container .left-side .list-left-side .cell .project-min .photo-cell .project-2 {
+                background-image: url("../images/picture_perfect.jpg");
+                width: 100%;
+                height: 100%;
+                background-position: center;
+                background-size: cover; }
+              .sect-projects .project-container .left-side .list-left-side .cell .project-min .photo-cell .project-3 {
+                background-image: url("../images/your_life.jpg");
+                width: 100%;
+                height: 100%;
+                background-position: center;
+                background-size: cover; }
           .sect-projects .project-container .left-side .list-left-side .cell .arrow {
             position: absolute;
             background-color: #979db1;
@@ -196,7 +228,8 @@ header {
             width: 2rem;
             top: calc(50% - 1rem);
             right: 0;
-            transform: matrix(0.71, 0.71, -0.71, 0.71, 16, 0); }
+            transform: matrix(0.71, 0.71, -0.71, 0.71, 16, 0);
+            box-shadow: 0px 0px 10px 0px #979db1; }
           .sect-projects .project-container .left-side .list-left-side .cell h3 {
             margin: 0;
             border: 0; }
@@ -208,10 +241,9 @@ header {
             .sect-projects .project-container .left-side .list-left-side .cell .tech-used .cell-icon {
               width: 2.5rem; }
     .sect-projects .project-container .right-side {
-      width: 100%; }
-      .sect-projects .project-container .right-side .photo-cell .project-1 {
-        background-image: url("../images/design_lab.jpg");
-        width: 100%;
-        height: 3rem; }
+      width: 100%;
+      background-image: url("../images/dev_office.jpg");
+      background-size: cover;
+      background-position: center right; }
 
 /*# sourceMappingURL=style.css.map */
