--- a/sass/style.scss
+++ b/sass/style.scss
@@ -205,7 +205,6 @@ header {
         margin: 0 0 0.5rem 0;
     }
     .project-container {
-        max-width: 88%;
         margin: 0 auto 0 0;
         display: flex;
         .left-side {
@@ -214,6 +213,7 @@ header {
             padding: 5rem 0 5rem 6rem;
             color: rgb(255, 255, 255);
             box-shadow: 0px 0px 10px 0px rgb(151, 157, 177);
+            width: 35%;
             .list-left-side {
                 display: flex;
                 flex-direction: column;
@@ -231,6 +231,44 @@ header {
                         background-color: rgb(3, 14, 55);
                         box-shadow: 0px 0px 10px 0px rgb(3, 14, 55);
                     }
+                    &:hover .project-min .photo-cell {
+                        background-color: rgb(3, 14, 55);
+                        box-shadow: 0px 0px 10px 0px rgb(3, 14, 55);
+                    }
+                    .project-min {
+                        position: absolute;
+                        top: calc(50% - 9rem);
+                        right: -65rem;
+                        .photo-cell {
+                            height: 18rem;
+                            width: 60rem;
+                            background-color: rgb(151, 157, 177);
+                            box-shadow: 0px 0px 10px 0px rgb(151, 157, 177);
+                            padding: 1rem;
+                            transition-duration: 0.5s;
+                            .project-1 {
+                                background-image: url("../images/design_lab.jpg");
+                                width: 100%;
+                                height: 100%;
+                                background-position: center;
+                                background-size: cover;
+                            }
+                            .project-2 {
+                                background-image: url("../images/picture_perfect.jpg");
+                                width: 100%;
+                                height: 100%;
+                                background-position: center;
+                                background-size: cover;
+                            }
+                            .project-3 {
+                                background-image: url("../images/your_life.jpg");
+                                width: 100%;
+                                height: 100%;
+                                background-position: center;
+                                background-size: cover;
+                            }
+                        }                          
+                    }
                     .arrow {
                         position: absolute;
                         background-color: rgb(151, 157, 177);
@@ -240,6 +278,7 @@ header {
                         top: calc(50% - 1rem);
                         right: 0;
                         transform: matrix(0.71, 0.71, -0.71, 0.71, 16, 0);
+                        box-shadow: 0px 0px 10px 0px rgb(151, 157, 177);
                     }
                     h3 {
                         margin: 0;
@@ -260,13 +299,9 @@ header {
         }
         .right-side {
             width: 100%;
-            .photo-cell {
-                .project-1 {
-                    background-image: url("../images/design_lab.jpg");
-                    width: 100%;
-                    height: 3rem;
-                }
-            }
+            background-image: url("../images/dev_office.jpg");
+            background-size: cover;
+            background-position: center right;
         }
     }
 }
